Update workflow: Auto-update and deploy to GitHub Pages

--- a/.github/workflows/update-library.yml
+++ b/.github/workflows/update-library.yml
@@ -1,18 +1,31 @@
-name: Update Piano Library
+name: Update and Deploy Piano Library
 
 on:
   push:
-    branches: [ master ]
-    paths:
-      - 'piano/**'
+    branches: ["master"]
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  update-html:
+  update-and-deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
       
     - name: Setup Node.js
       uses: actions/setup-node@v3
@@ -28,3 +41,15 @@ jobs:
         git config --global user.email 'action@github.com'
         git add index.html
         git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update: Regenerate index.html" && git push)
+    
+    - name: Setup Pages
+      uses: actions/configure-pages@v5
+      
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: '.'
+        
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
