--- a/.github/workflows/update-library.yml
+++ b/.github/workflows/update-library.yml
@@ -16,6 +16,8 @@ concurrency:
 
 jobs:
   update-and-deploy:
+    environment:
+      name: github-pages
     runs-on: ubuntu-latest
     
     steps:
