--- a/.github/workflows/update-library.yml
+++ b/.github/workflows/update-library.yml
@@ -1,6 +1,8 @@
-name: Update and Deploy Piano Library
+# Deploy Piano Library to GitHub Pages
+name: Deploy Piano Library
 
 on:
+  # Runs on pushes targeting the master branch
   push:
     branches: ["master"]
     paths:
@@ -8,36 +10,63 @@ on:
       - 'public/piano/**'
       - 'generate_data.cjs'
       - 'package.json'
+      - 'index.html'
+      - 'vite.config.js'
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-and-commit:
+  # Build job
+  build:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-    
-    - name: Install dependencies
-      run: npm install
+      - name: Checkout
+        uses: actions/checkout@v4
         
-    - name: Generate songs.json
-      run: node generate_data.cjs
-    
-    - name: Build React app
-      run: npm run build
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
       
-    - name: Commit and push build files
-      run: |
-        git config --global user.name 'GitHub Action'
-        git config --global user.email 'action@github.com'
-        git add index.html assets/ src/data/songs.json
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-build: Update index.html, assets and songs.json" && git push)
+      - name: Install dependencies
+        run: npm ci
+          
+      - name: Generate songs.json
+        run: node generate_data.cjs
+      
+      - name: Build React app
+        run: npm run build
+      
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+        
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './dist'
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
